Table users {
  id int [pk, increment]
  username varchar(50) [not null, unique]
  password varchar(255) [not null]
  user_type varchar(20) [not null]
  account_status varchar(20)
  is_active boolean
  archived_at datetime
  deactivated_at datetime
  deleted_at datetime
  created_at datetime
  updated_at datetime
}

Table profile_photos {
  user_id int [pk]
  photo_data text [not null]
  uploaded_at datetime
}

Table departments {
  department_code varchar(20) [pk]
  department_name varchar(200) [not null, unique]
  description text
  is_active boolean
  created_at datetime
  updated_at datetime
}

Table admins {
  id int [pk]
  admin_id varchar(50) [not null, unique]
  first_name varchar(100) [not null]
  middle_name varchar(100)
  last_name varchar(100) [not null]
  email varchar(255)
  contact_number varchar(20)
  created_at datetime
  updated_at datetime
}

Table teachers {
  id int [pk]
  teacher_id varchar(50) [not null, unique]
  first_name varchar(100) [not null]
  middle_name varchar(100)
  last_name varchar(100) [not null]
  email varchar(255)
  contact_number varchar(20)
  department_code varchar(20)
  created_at datetime
  updated_at datetime
}

Table students {
  id int [pk]
  student_id varchar(50) [not null, unique]
  first_name varchar(100) [not null]
  middle_name varchar(100)
  last_name varchar(100) [not null]
  email varchar(255)
  contact_number varchar(20)
  department_code varchar(20)
  is_working_student boolean
  archived_at datetime
  deletion_scheduled_at datetime
  created_at datetime
  updated_at datetime
}

Table subjects {
  subject_code varchar(20) [pk]
  description text
  created_at datetime
  updated_at datetime
}

Table classes {
  class_id int [pk, increment]
  subject_code varchar(20) [not null]
  teacher_id int [not null]
  edp_code varchar(50) [unique]
  descriptive_title varchar(255)
  section varchar(50)
  schedule varchar(100)
  room varchar(50)
  semester varchar(20)
  school_year varchar(9)
  is_active boolean
  is_archived boolean
  created_by_user_id int [not null]
  created_at datetime
  updated_at datetime
}

Table classlist {
  class_id int [not null]
  student_id int [not null]
  enrollment_date date [not null]
  status varchar(20)
  is_archived boolean
  created_at datetime
  updated_at datetime

  indexes {
    (class_id, student_id) [pk]
  }
}

Table student_archived_classes {
  student_id int [not null]
  class_id int [not null]
  archived_at datetime
  updated_at datetime

  indexes {
    (student_id, class_id) [pk]
  }
}

Table attendance {
  id int [pk, increment]
  class_id int [not null]
  student_id int [not null]
  attendance_date date [not null]
  session_id int
  status varchar(20)
  time_in_at datetime
  remarks text
  is_archived boolean
  created_at datetime
  updated_at datetime

  indexes {
    (class_id, student_id, attendance_date, session_id) [unique]
  }
}

Table attendance_sessions {
  session_id int [pk, increment]
  class_id int [not null]
  attendance_date date [not null]
  session_name varchar(255) [not null]
  status varchar(20) [not null]
  is_archived boolean [not null]
  class_duration_minutes int
  grace_period_minutes int
  opened_at datetime
  closed_at datetime
  created_by_user_id int [not null]
  created_at datetime
  updated_at datetime
}

Table log_entries {
  id int [pk, increment]
  user_id int [not null]
  pc_number varchar(50)
  login_time datetime
  logout_time datetime
  is_archived boolean
  archived_at datetime
  archived_by_user_id int
}

Table user_session_heartbeats {
  user_id int [pk]
  last_seen datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table feedback {
  id int [pk, increment]
  student_id int [not null]
  pc_number varchar(50) [not null]
  equipment_condition varchar(20)
  monitor_condition varchar(20)
  keyboard_condition varchar(20)
  mouse_condition varchar(20)
  comments text
  working_student_notes text
  status varchar(20)
  admin_status varchar(20)
  admin_resolved_at datetime
  priority varchar(20)
  verified_by_user_id int
  verified_at datetime
  forwarded_by_user_id int
  forwarded_at datetime
  date_submitted datetime
  is_archived boolean
  archived_at datetime
  archived_by_user_id int
  created_at datetime
  updated_at datetime
}

Table registration_approvals {
  id int [pk, increment]
  user_id int [not null, unique]
  approved_by_user_id int
  status varchar(20)
  rejection_reason text
  processed_at datetime
  created_at datetime
  updated_at datetime
}

Table password_reset_requests {
  id int [pk, increment]
  student_user_id int [not null]
  teacher_user_id int [not null]
  new_password_hash varchar(255) [not null]
  status varchar(20) [not null]
  requested_at datetime
  resolved_at datetime
}

Table notifications {
  id int [pk, increment]
  user_id int [not null]
  category varchar(50) [not null]
  title varchar(200) [not null]
  message varchar(500) [not null]
  tone varchar(20) [not null]
  is_read boolean [not null]
  reference_type varchar(50)
  reference_id int
  created_at datetime [not null]
  read_at datetime
}

Ref: profile_photos.user_id > users.id
Ref: admins.id > users.id
Ref: teachers.id > users.id
Ref: teachers.department_code > departments.department_code
Ref: students.id > users.id
Ref: students.department_code > departments.department_code
Ref: classes.subject_code > subjects.subject_code
Ref: classes.teacher_id > teachers.id
Ref: classes.created_by_user_id > users.id
Ref: classlist.class_id > classes.class_id
Ref: classlist.student_id > students.id
Ref: student_archived_classes.student_id > students.id
Ref: student_archived_classes.class_id > classes.class_id
Ref: attendance.class_id > classes.class_id
Ref: attendance.student_id > students.id
Ref: attendance.session_id > attendance_sessions.session_id
Ref: attendance_sessions.class_id > classes.class_id
Ref: attendance_sessions.created_by_user_id > users.id
Ref: log_entries.user_id > users.id
Ref: log_entries.archived_by_user_id > users.id
Ref: user_session_heartbeats.user_id > users.id
Ref: feedback.student_id > students.id
Ref: feedback.verified_by_user_id > users.id
Ref: feedback.forwarded_by_user_id > users.id
Ref: feedback.archived_by_user_id > users.id
Ref: registration_approvals.user_id > users.id
Ref: registration_approvals.approved_by_user_id > users.id
Ref: password_reset_requests.student_user_id > users.id
Ref: password_reset_requests.teacher_user_id > users.id
Ref: notifications.user_id > users.id
